--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,8 +1,9 @@
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/tmux.conf
 bind-key b set-option status
 
 set -g mouse on
+set -g default-command fish
 
 bind-key h select-pane -L
 bind-key j select-pane -D
@@ -11,8 +12,4 @@ bind-key l select-pane -R
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-run '~/.tmux/plugins/tpm/tpm'
 
