--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -8,6 +8,7 @@ exec --no-startup-id nm-applet
 
 #Always start
 exec_always --no-startup-id ~/.config/polybar/launch.sh
+exec_always feh --bg-fill ~/Pictures/wall/wallhaven-p92y93.png
 
 # Audio control
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -17,8 +18,8 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ to
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 bindsym $mod+F1 exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym $mod+F2 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym $mod+F3 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
+bindsym $mod+F2 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status
+bindsym $mod+F3 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
 bindsym $mod+F4 exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 bindsym $mod+F5 exec --no-startup-id ~/.local/bin/switch-audio.sh
