--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -9,20 +9,20 @@ disabled = #707880
 
 [bar/example]
 width = 100%
-height = 24pt
-radius = 6
+height = 20pt
+radius = 15 
 
 ; dpi = 96
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 3pt
+line-size = 2pt
 
 border-size = 4pt
 border-color = #00000000
 
-padding-left = 0
+padding-left = 1
 padding-right = 1
 
 module-margin = 1
@@ -30,10 +30,10 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = monospace;2
+font-0 = "DepartureMono Nerd Font:size=10;3"
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+modules-right = pulseaudio memory cpu wlan eth date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -42,7 +42,7 @@ enable-ipc = true
 
 ; wm-restack = generic
 ; wm-restack = bspwm
-; wm-restack = i3
+ wm-restack = i3
 
 ; override-redirect = true
 
@@ -134,7 +134,8 @@ label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
+#label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
+label-connected = %essid% 
 
 [module/eth]
 inherit = network-base
